# gst-gzdec

./: README.md  meson.build
src/: gstgzdec.c  gstgzdec.h
